--- a/board-front/src/views/Authentication/style.css
+++ b/board-front/src/views/Authentication/style.css
@@ -147,3 +147,36 @@
   font-weight: 500;
   line-height: 140%;
 }
+.auth-consent-box{
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.auth-check-box {
+  cursor: pointer;
+
+  width: 24px;
+  height: 24px;
+
+}
+.auth-consent-title{
+  color: rgba(0,0,0,0.7);
+
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140%;
+}
+.auth-consent-title-error{
+  color: blue;
+
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140%;
+}
+.auth-consent-link{
+  color: rgba(0,0,0,1);
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 140%;
+}
