--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -20,6 +20,25 @@
 .black-button:hover{
   background-color: #ff89a2;
 }
+.disable-button{
+  border-radius: 46px;
+  width: 95px;
+  height: 30px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #ff4f79;
+
+  color: white;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 140%;
+
+  cursor: not-allowed;
+}
 .black-large-full-button{
   width: 100%;
   height: 48px;
