--- a/board-front/src/views/Board/Write/style.css
+++ b/board-front/src/views/Board/Write/style.css
@@ -3,5 +3,72 @@
   display: flex;
   justify-content: center;
 
-  background-color: #ffd9e6;
+  background-color: #ffebee;
+  color: #ff4f79;
+}
+.board-write-container{
+  background-color: white;
+  padding: 100px 24px;
+  width: 996px;
+  min-height: 1500px;
+}
+.board-write-box{
+  display: flex;
+  flex-direction: column;
+
+  gap: 40px;
+}
+.board-write-title-box{
+  width: 100%;
+
+}
+.board-write-title-textarea{
+  width: 100%;
+  border: none;
+  outline: none;
+  background: none;
+  resize: none;
+
+  color: black;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 140%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.board-write-content-box{
+  width: 100%;
+  display: flex;
+  gap: 16px;
+}
+.board-write-content-textarea{
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 150%;
+
+  border: none;
+  outline: none;
+  background: none;
+  resize: none;
+  flex: 1;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.board-write-images-box{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.board-write-image-box{
+  position: relative;
+  width: 100%;
+
+}
+.board-write-image{
+  width: 100%;
+}
+.image-close{
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
