--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -1,3 +1,9 @@
+.divider{
+  width: 100%;
+  border-top: 1px solid #ff4f79;
+
+}
+
 .black-button{
   border-radius: 46px;
   width: 95px;
@@ -140,4 +146,10 @@
 }
 .check-ring-light-icon{
   background-image: url(assets/image/check-ring-light.png);
+}
+.image-box-light-icon{
+  background-image: url(assets/image/image-box-light.png);
+}
+.close-icon{
+  background-image: url(assets/image/close.png);
 }
