--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -153,3 +153,6 @@
 .close-icon{
   background-image: url(assets/image/close.png);
 }
+.more-icon{
+  background-image: url(assets/image/more.png);
+}
