--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -3,6 +3,9 @@
   border-top: 1px solid #ff4f79;
 
 }
+.emphasis{
+  font-weight: bolder;
+}
 
 .black-button{
   border-radius: 46px;
@@ -156,3 +159,19 @@
 .more-icon{
   background-image: url(assets/image/more.png);
 }
+.favorite-fill-icon{
+  background-image: url(assets/image/favorite-fill.png);
+}
+.favorite-light-icon{
+  background-image: url(assets/image/favorite-light.png);
+}
+.up-light-icon{
+  background-image: url(assets/image/expand-up-light.png);
+}
+.down-light-icon{
+  background-image: url(assets/image/expand-down-light.png);
+}
+.comment-icon{
+  background-image: url(assets/image/chat-light.png);
+}
+
