--- a/board-front/src/views/Board/Detail/style.css
+++ b/board-front/src/views/Board/Detail/style.css
@@ -188,17 +188,20 @@
   border: 1px solid #ff4f79;
   padding: 20px;
 }
-.board-detail-bottom-comment-textarea{
+.board-detail-bottom-comment-textarea {
+  width: 100%;
+  min-height: 60px;
   border: none;
-  resize: none;
   outline: none;
+  resize: none;
   background: none;
 
   color: black;
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  overflow: hidden;
+
+  box-sizing: border-box;
 }
 .board-detail-bottom-comment-button-box{
   display: flex;
