--- a/board-front/src/views/Main/style.css
+++ b/board-front/src/views/Main/style.css
@@ -43,3 +43,64 @@
   justify-content: space-between;
   gap: 24px;
 }
+#main-bottom-wrapper{
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+  background-color: #fbeef3;
+}
+.main-bottom-container{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 1200px;
+  min-width: 1200px;
+}
+
+.main-bottom-title{
+  font-family: GimhaeGaya, cursive;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
+
+  color: #f86689;
+}
+.main-bottom-contents-box{
+  width: 100%;
+  display:  grid;
+  grid-template-columns: 8fr 4fr;
+  gap: 24px;
+}
+
+.main-bottom-current-contents{
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.main-bottom-popular-card{
+  grid-column: 2/3;
+  background: white;
+  padding: 20px;
+}
+.main-bottom-popular-card-container{
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
+
+}
+.main-bottom-popular-card-title{
+  font-family: GimhaeGaya, cursive;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 140%;
+  color: #f86689;
+}
+.main-bottom-popular-card-contents{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+.main-bottom-pagination-box{
+  margin-top: 60px;
+}
