--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -195,4 +195,7 @@
 .expand-right-icon{
   background-image: url(assets/image/expand-right.png);
 }
+.edit-icon{
+  background-image: url(assets/image/edit-light.png);
+}
 
