--- a/board-front/src/views/User/style.css
+++ b/board-front/src/views/User/style.css
@@ -84,10 +84,88 @@
 }
 
  #user-bottom-wrapper{
-   padding: 10px 0;
+   padding: 40px 0;
+   min-height: 880px;
 
    display: flex;
    justify-content: center;
 
    background-color: #fbeef3;
  }
+ .user-bottom-container{
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   width: 1200px;
+   min-width: 1200px;
+ }
+ .user-bottom-title{
+   font-family: GimhaeGaya, cursive;
+   font-size: 24px;
+   font-weight: 400;
+   line-height: 140%;
+
+   color: #f86689;
+ }
+ .user-bottom-contents-box{
+   width: 100%;
+   display:  grid;
+   grid-template-columns: 8fr 4fr;
+   gap: 24px;
+ }
+ .uer-bottom-contents{
+   grid-column: 1/2;
+   display: flex;
+   flex-direction: column;
+   gap: 16px;
+ }
+ .user-bottom-contents-nothing{
+   width: 100%;
+   height: 76px;
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   font-family: GimhaeGaya, cursive;
+   color: gray;
+   font-size: 24px;
+   font-weight: 500;
+   line-height: 140%;
+ }
+ .user-bottom-side-box{
+   grid-column: 2/3;
+ }
+ .user-bottom-side-card{
+   width: 100%;
+   height: 76px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   background-color: white;
+
+   cursor: pointer;
+ }
+ .user-bottom-side-card:hover{
+   background-color: lightpink;
+ }
+ .user-bottom-side-container{
+   display: flex;
+   align-items: center;
+
+   gap: 6px;
+ }
+ .user-bottom-side-text{
+   color: #ff4f79;
+   font-size: 18px;
+   font-weight: 500;
+   line-height: 140%;
+
+   font-family: GimhaeGaya, cursive;
+ }
+.user-bottom-pagination-box{
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
