--- a/board-front/src/views/User/style.css
+++ b/board-front/src/views/User/style.css
@@ -142,7 +142,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-
+   border-radius: 12px;
    background-color: white;
 
    cursor: pointer;
@@ -153,7 +153,6 @@
  .user-bottom-side-container{
    display: flex;
    align-items: center;
-
    gap: 6px;
  }
  .user-bottom-side-text{
@@ -168,4 +167,30 @@
   display: flex;
   justify-content: center;
   margin-top: 60px;
+}
+.crop-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.crop-container {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background: #333;
+}
+
+.crop-button-box {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
 }
